k3s/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: pageturner
spec:
  selector:
    app: api
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 31002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: pageturner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: docker-vm-1:5000/books-api:6
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
