k3s/client.yaml
apiVersion: v1
kind: Service
metadata:
  name: client 
  namespace: pageturner
spec:
  selector:
    app: client 
  type: NodePort
  ports:
    - port: 5173
      targetPort: 5173
      nodePort: 31001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: pageturner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: docker-vm-1:5000/books-client:3
          livenessProbe:
            httpGet:
              path: /
              port: 5173
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 5173
            initialDelaySeconds: 5
            periodSeconds: 5
