k3s/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: pageturner
spec:
  selector:
    app: redis
  ports:
    - port: 6379 
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: pageturner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis 
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:8.6.2-alpine3.23
          ports:
            - containerPort: 6379
